--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-dotenv": "^3.3.1",
@@ -24,6 +25,7 @@
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-size-matters": "^0.4.0",
     "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
