--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-firebase/app": "^14.2.2",
+    "@react-native-firebase/storage": "^14.2.2",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
@@ -20,12 +22,16 @@
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-image-crop-picker": "^0.37.2",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-size-matters": "^0.4.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
